; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_pull.c_get_eof.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_pull.c_get_eof.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ao = type { %struct.ao_pull_state* }
%struct.ao_pull_state = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ao*)* @get_eof to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_eof(%struct.ao* %0) #0 {
  %2 = alloca %struct.ao*, align 8
  %3 = alloca %struct.ao_pull_state*, align 8
  store %struct.ao* %0, %struct.ao** %2, align 8
  %4 = load %struct.ao*, %struct.ao** %2, align 8
  %5 = getelementptr inbounds %struct.ao, %struct.ao* %4, i32 0, i32 0
  %6 = load %struct.ao_pull_state*, %struct.ao_pull_state** %5, align 8
  store %struct.ao_pull_state* %6, %struct.ao_pull_state** %3, align 8
  %7 = load %struct.ao_pull_state*, %struct.ao_pull_state** %3, align 8
  %8 = getelementptr inbounds %struct.ao_pull_state, %struct.ao_pull_state* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 0
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @mp_ring_buffered(i32 %11)
  %13 = icmp eq i64 %12, 0
  %14 = zext i1 %13 to i32
  ret i32 %14
}

declare dso_local i64 @mp_ring_buffered(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
